# Al-Mizan-Project

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  frontend.yml  pages.yml
almizan-core/: .dockerignore  Cargo.toml  Dockerfile  nohup.out
almizan-core/src/: main.rs
almizan-core/src/api/: auth.rs
almizan-core/src/api/v1/: citadel.rs  evidence.rs  graph.rs  hadith.rs  mod.rs  names.rs  network.rs  synthesis.rs  verse.rs
almizan-core/src/domain/: graph.rs  models.rs
almizan-core/static/css/: style.css
almizan-core/static/js/: graph.js  theme.js
almizan-core/templates/: base.html  governance.html  graph.html  index.html  landing.html  network.html  playground.html  presentation.html
almizan-etl/: download_sources.py  extract_hadith.py  extract_morphology.py  generate_graph.py  ingest_semantichadith.py  transform_divine_names.py  transform_hadith.py  transform_morphology.py  transform_tanzil.py  transform_to_surql.py  verify_graph_integrity.py  verify_ingestion.py
almizan-etl/data/: juz30_arabic.json  juz30_english.json
almizan-etl/output/: hadith_nawawi.surql  ingest.surql  quran_juz30.surql
backend/: Cargo.toml  Dockerfile
backend/archive/: bitcoin.md  riba.md
backend/src/: main.rs
backend/src/api/: auth.rs
backend/src/api/v1/: ai.rs  authority.rs  citadel.rs  dashboard.rs  enterprise.rs  event.rs  evidence.rs  graph.rs  identity.rs  mod.rs  syntax.rs  synthesis.rs  verify.rs
backend/src/domain/: abrogation.rs  authority.rs  compliance.rs  event.rs  hidden_hand.rs  mod.rs  opinion.rs  scholar.rs  school.rs  traits.rs  validation.rs  verse.rs
backend/src/enterprise/: analytics.rs  compliance.rs  mod.rs  shariah.rs
backend/src/identity/: did.rs  mod.rs  vc.rs
backend/src/repository/: db.rs
backend/static/.well-known/: ai-plugin.json
backend/templates/: base.html  citadel.html  evidence_result.html  graph.html  index.html  presentation.html  strategy.html  verify_result.html
database/config/: capabilities.json
database/schema/: initial_schema.surql  schema.surql
docs/: ARCHITECTURE.md  DUAL_ENTITY_STRUCTURE.md  FYP 1 Report.md  FYP Final Report.md  GOVERNANCE.md  README.md  citadel.html  engine.html  graph.html  index.html  playground.html  presentation.html  strategy.html
frontend/: index.html  package-lock.json  package.json
scripts/: archive_to_ipfs.rs
(+28 files in other folders)
