[package]
name = "al-mizan-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.0", features = ["protocol-ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
askama = "0.12"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.5.0"
uuid = { version = "1.19.0", features = ["v4"] }
serde_yaml = "0.9"

[[bin]]
name = "archive_to_ipfs"
path = "../scripts/archive_to_ipfs.rs"
